--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4.8.0"
 clap = "4.5.8"
-uuid = "1.9.1"
+dotenv = "0.15.0"
+url = "2.5.2"
+uuid = { version = "1.9.1", features = ["v4"] }
