--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.8.0"
+base64 = "0.22.1"
 clap = "4.5.8"
 dotenv = "0.15.0"
+sha2 = "0.10.8"
 url = "2.5.2"
 uuid = { version = "1.9.1", features = ["v4"] }
