--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ actix-web = "4.8.0"
 base64 = "0.22.1"
 clap = "4.5.8"
 dotenv = "0.15.0"
+rusoto_core = "0.48.0"
+rusoto_dynamodb = "0.48.0"
+serde = { version = "1.0.204", features = ["derive"] }
 sha2 = "0.10.8"
 url = "2.5.2"
 uuid = { version = "1.9.1", features = ["v4"] }
