--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ actix-web = "4.8.0"
 base64 = "0.22.1"
 clap = "4.5.8"
 dotenv = "0.15.0"
+env_logger = "0.11.3"
+log = "0.4.22"
 rusoto_core = "0.48.0"
 rusoto_dynamodb = "0.48.0"
 serde = { version = "1.0.204", features = ["derive"] }
